:rocket: add favorites, model, middle, controller, services
